@@ -1,5 +1,14 @@
 2004-11-07  Dalibor Topic  <robilad@kaffe.org>
 
+	*  libraries/javalib/java/awt/image/ConvolveOp.java:
+        Resynced with GNU Classpath.
+
+	2004-11-06  Sven de Marothy  <sven@physto.se>
+
+        * java/awt/image/ConvolveOp.java: Added missing copyright notice.
+
+2004-11-07  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/awt/image/BandCombineOp.java,
 	libraries/javalib/java/awt/image/ConvolveOp.java,
 	libraries/javalib/java/awt/image/LookupOp.java:
